# django_channels_sample_demo

./: .gitignore  README.rst  pyproject.toml  requirements.txt
channels_sample/: pytest.ini
channels_sample/config/: asgi.py  settings.py  urls.py
channels_sample/notify/: urls.py  views.py
channels_sample/notify/management/commands/: send_promotion_to_user.py
channels_sample/notify/sockets/: consumers.py  router.py
channels_sample/notify/templates/notify/: client.html
channels_sample/notify/tests/: test_consumers.py
