[tool.poetry]
name = "channels_sample"
version = "0.1.0"
description = ""
authors = ["Ben Cleary <ben.cleary@dashboard.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
channels = "^3.0.5"
channels-redis = "^3.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pytest-django = "^4.5.2"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
